--- a/WeatherHistoryViewer.Web/wwwroot/css/site.css
+++ b/WeatherHistoryViewer.Web/wwwroot/css/site.css
@@ -1,22 +1,34 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
-html, body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; }
-
-a, .btn-link { color: #0366d6; }
-
-.btn-primary {
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-    color: #fff;
+html, body {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-.content { padding-top: 1.1rem; }
+a, .btn-link {
+    color: #0366d6;
+}
 
-.valid.modified:not([type=checkbox]) { outline: 1px solid #26b050; }
+.btn-primary {
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
+}
 
-.invalid { outline: 1px solid red; }
+.content {
+    padding-top: 1.1rem;
+}
 
-.validation-message { color: red; }
+.valid.modified:not([type=checkbox]) {
+    outline: 1px solid #26b050;
+}
+
+.invalid {
+    outline: 1px solid red;
+}
+
+.validation-message {
+    color: red;
+}
 
 #blazor-error-ui {
     background: lightyellow;
@@ -30,9 +42,9 @@ a, .btn-link { color: #0366d6; }
     z-index: 1000;
 }
 
-#blazor-error-ui .dismiss {
-    cursor: pointer;
-    position: absolute;
-    right: 0.75rem;
-    top: 0.5rem;
-}
+    #blazor-error-ui .dismiss {
+        cursor: pointer;
+        position: absolute;
+        right: 0.75rem;
+        top: 0.5rem;
+    }
