--- a/WeatherHistoryViewer.Web/Shared/NavMenu.razor
+++ b/WeatherHistoryViewer.Web/Shared/NavMenu.razor
@@ -12,6 +12,11 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="downloadNewData">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Download new data 
+            </NavLink>
+        </li>
     </ul>
 </div>
 
