--- a/WeatherHistoryViewer.Web/Shared/NavMenu.razor
+++ b/WeatherHistoryViewer.Web/Shared/NavMenu.razor
@@ -9,12 +9,17 @@
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-home" aria-hidden="true"></span> Overview
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="weatherofDate">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Weather of date
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="downloadNewData">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Download new data 
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Download new data
             </NavLink>
         </li>
     </ul>
