--- a/WeatherHistoryViewer.Web/Shared/NavMenu.razor
+++ b/WeatherHistoryViewer.Web/Shared/NavMenu.razor
@@ -13,7 +13,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="weatherofDate">
+            <NavLink class="nav-link" href="weatherOfDate">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Weather of date
             </NavLink>
         </li>
