--- a/WeatherHistoryViewer.Web/Pages/WeatherOfWeek.razor
+++ b/WeatherHistoryViewer.Web/Pages/WeatherOfWeek.razor
@@ -4,6 +4,14 @@
 @using WeatherHistoryViewer.Services.Handlers
 @using System.ComponentModel.DataAnnotations
 
+@*<style>
+    table {
+        border-collapse: collapse;
+    }
+tr { display: block; float: left; }
+th, td { display: block; border: 1px solid black; }
+</style>*@
+
 <EditForm Model="@_formResponse" OnValidSubmit="@HandleValidSubmit">
     <DataAnnotationsValidator />
     <ValidationSummary />
@@ -22,70 +30,84 @@
     <button class="button" type="submit">Submit</button>
 </EditForm>
 
-@*@if (weather == null)
-{
-    <p>
-        <em>Loading...</em>
-    </p>
-}
-else if (weather.Count == 0)
-{
-    <br />
-    <p>
-        <em>Nothing found! Please try again.</em>
-    </p>
-    <br />
-    <h4>Troubleshooting:</h4>
-    <p>
-        <b>Is your location one of the following?</b>
-    </p>
-    foreach (var location in new LocationHandler().GetAllLocationNames())
+@if (_weatherOfWeeks == null)
     {
         <p>
-            <em>@location</em>
+            <em>Loading...</em>
         </p>
     }
-    <p>
-        <b>Is your Date something like this</b>
-    </p>
-    <p>
-        <em>MONTH-DAY</em>
-    </p>
-    <p>
-        <em>2-28</em>
-    </p>
-    <p>
-        <em>12-15</em>
-    </p>
-}
-else
-{
-    <h1>The weather of date @weather.First().Date.Split("-")[1]-@weather.First().Date.Split("-")[2] in @weather.First().Location.Country, @weather.First().Location.Name</h1>
-    <br />
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>Year</th>
-                <th>Avg temp</th>
-                <th>Min temp</th>
-                <th>Max temp</th>
-                <th>Sun hours</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var day in weather)
-            {
+    else if (_weatherOfWeeks.Count == 0)
+    {
+        <br />
+        <p>
+            <em>Nothing found! Please try again.</em>
+        </p>
+        <br />
+        <h4>Troubleshooting:</h4>
+        <p>
+            <b>Is your location one of the following?</b>
+        </p>
+        foreach (var location in new LocationHandler().GetAllLocationNames())
+        {
+            <p>
+                <em>@location</em>
+            </p>
+        }
+        <p>
+            <b>Is your Date something like this</b>
+        </p>
+        <p>
+            <em>MONTH-DAY</em>
+        </p>
+        <p>
+            <em>2-28</em>
+        </p>
+        <p>
+            <em>12-15</em>
+        </p>
+    }
+    else
+    {
+        <h1>The weather of @_formResponse.Date in @_weatherOfWeeks.First().First().Location.Country, @_weatherOfWeeks.First().First().Location.Name</h1>
+        <br />
+        <table class="table table-bordered">
+            <thead>
                 <tr>
-                    <th>@day.Date.Split("-")[0]</th>
-                    <th>@day.AvgTemp</th>
-                    <th>@day.MinTemp</th>
-                    <th>@day.MaxTemp</th>
-                    <th>@day.SunHour</th>
+                    <th>Year</th>
+                    <th>Date</th>
+                    <th>Avg temp</th>
+                    <th>Min temp</th>
+                    <th>Max temp</th>
+                    <th>Sun hours</th>
                 </tr>
-            }
-        </tbody>
-    </table>
-}*@
+            </thead>
+            <tbody>
+                @foreach (var week in _weatherOfWeeks.FindAll(wl=>wl.Count > 0))
+                {
+                    <tr>
+                        <th>Year</th>
+                        <th>Date</th>
+                        <th>Avg temp</th>
+                        <th>Min temp</th>
+                        <th>Max temp</th>
+                        <th>Sun hours</th>
+                    </tr>
+                    @foreach (var day in _weatherOfWeeks.Find(w=>w.Count > 3))
+                    {
+
+                        <tr>
+                            <th>@day.Date.Split("-")[1]/@day.Date.Split("-")[2]</th>
+                            <th>@day.Date.Split("-")[0]</th>
+                            <th>@day.AvgTemp</th>
+                            <th>@day.MinTemp</th>
+                            <th>@day.MaxTemp</th>
+                            <th>@day.SunHour</th>
+                        </tr>
+                    }
+                }
+            </tbody>
+        </table>
+    }
 
 
 @code {
@@ -102,16 +124,16 @@ else
 
     private readonly Form _formResponse = new();
 
-    //private List<HistoricalWeather> _weather;
+    private List<List<HistoricalWeather>> _weatherOfWeeks;
 
     protected override void OnInitialized()
     {
-        //_weather = _weatherHelper.GetWeatherOfDateInThePastYears("Amsterdam", DateTime.Now.AddDays(-1).ToString("MM/dd"));
+        _weatherOfWeeks = _weatherHelper.GetWeatherWeekOfDateInThePastYears("Amsterdam", DateTime.Now.AddDays(-1).ToString("MM/dd"));
     }
 
     void HandleValidSubmit()
     {
-        //_weather = _weatherHelper.GetWeatherOfDateInThePastYears(_formResponse.Location, _formResponse.Date);
+        _weatherOfWeeks = _weatherHelper.GetWeatherWeekOfDateInThePastYears(_formResponse.Location, _formResponse.Date);
     }
 
 }
