--- a/WeatherHistoryViewer.Web/Pages/WeatherOfDate.razor
+++ b/WeatherHistoryViewer.Web/Pages/WeatherOfDate.razor
@@ -19,7 +19,7 @@
             <InputText id="date" @bind-Value="formResponse.Date"/>
         </label>
     </p>
-    <button class="button" type="submit">Submit</button>
+    <button class="button" type="submit">Reload</button>
 </EditForm>
 
 @if (weather == null)
