--- a/WeatherHistoryViewer.Web/Pages/WeatherOfWeek.razor
+++ b/WeatherHistoryViewer.Web/Pages/WeatherOfWeek.razor
@@ -19,83 +19,151 @@
             <InputText id="date" @bind-Value="_formResponse.Date" />
         </label>
     </p>
-    <button class="button" type="submit">Submit</button>
+    <button class="button" type="submit">Reload</button>
 </EditForm>
 
 @if (_weatherOfWeeks == null)
+{
+    <p>
+        <em>Loading...</em>
+    </p>
+}
+else if (_weatherOfWeeks.Count == 0)
+{
+    <br />
+    <p>
+        <em>Nothing found! Please try again.</em>
+    </p>
+    <br />
+    <h4>Troubleshooting:</h4>
+    <p>
+        <b>Is your location one of the following?</b>
+    </p>
+    foreach (var location in new LocationHandler().GetAllLocationNames())
     {
         <p>
-            <em>Loading...</em>
+            <em>@location</em>
         </p>
     }
-    else if (_weatherOfWeeks.Count == 0)
-    {
-        <br />
-        <p>
-            <em>Nothing found! Please try again.</em>
-        </p>
-        <br />
-        <h4>Troubleshooting:</h4>
-        <p>
-            <b>Is your location one of the following?</b>
-        </p>
-        foreach (var location in new LocationHandler().GetAllLocationNames())
+    <p>
+        <b>Is your Date something like this</b>
+    </p>
+    <p>
+        <em>MONTH-DAY</em>
+    </p>
+    <p>
+        <em>2-28</em>
+    </p>
+    <p>
+        <em>12-15</em>
+    </p>
+}
+else
+{
+    <h1>The weather of @_weatherOfWeeks.First().First().Date.Split("-")[1]-@_weatherOfWeeks.First().First().Date.Split("-")[2] in @_weatherOfWeeks.First().First().Location.Country, @_weatherOfWeeks.First().First().Location.Name</h1>
+    <br />
+    <h2>Average temperature</h2>
+    <table class="table table-bordered">
+        <tr>
+            <th>Year</th>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+            <th>Thursday</th>
+            <th>Friday</th>
+            <th>Satuday</th>
+            <th>Sunday</th>
+        </tr>
+        @foreach (var week in _weatherOfWeeks)
         {
-            <p>
-                <em>@location</em>
-            </p>
-        }
-        <p>
-            <b>Is your Date something like this</b>
-        </p>
-        <p>
-            <em>MONTH-DAY</em>
-        </p>
-        <p>
-            <em>2-28</em>
-        </p>
-        <p>
-            <em>12-15</em>
-        </p>
-    }
-    else
-    {
-<h1>The weather of @_weatherOfWeeks.First().First().Date.Split("-")[1]-@_weatherOfWeeks.First().First().Date.Split("-")[2] in @_weatherOfWeeks.First().First().Location.Country, @_weatherOfWeeks.First().First().Location.Name</h1>
-        <br />
-        <table class="table table-bordered">
-                <tr>
-                    <th>DayOfWeek</th>
-                    <th>Year</th>
-                    <th>Avg temp</th>
-                    <th>Min temp</th>
-                    <th>Max temp</th>
-                    <th>Sun hours</th>
-                </tr>
-                @foreach (var week in _weatherOfWeeks)
+            <tr>
+                <th>@week.First().Date.Split("-")[0]</th>
+                @foreach (var day in week)
                 {
-                    <tr>
-                        <th>*</th>
-                        <th>Year</th>
-                        <th>Avg temp</th>
-                        <th>Min temp</th>
-                        <th>Max temp</th>
-                        <th>Sun hours</th>
-                    </tr>
-                    @foreach (var day in week)
-                    {
-
-                        <tr>
-                            <th>@_dateHelper.ConvertDateStringToDate(day.Date).DayOfWeek </th>
-                            <th>@day.Date.Split("-")[0]</th>
-                            <th>@day.AvgTemp</th>
-                            <th>@day.MinTemp</th>
-                            <th>@day.MaxTemp</th>
-                            <th>@day.SunHour</th>
-                        </tr>
-                    }
+                    <th>@day.AvgTemp</th>
                 }
-        </table>
-    }
+            </tr>
+        }
+    </table>
+
+    <br />
+    <br />
+    <h2>Minimum temperature</h2>
+    <table class="table table-bordered">
+        <tr>
+            <th>Year</th>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+            <th>Thursday</th>
+            <th>Friday</th>
+            <th>Satuday</th>
+            <th>Sunday</th>
+        </tr>
+        @foreach (var week in _weatherOfWeeks)
+        {
+            <tr>
+                <th>@week.First().Date.Split("-")[0]</th>
+                @foreach (var day in week)
+                {
+                    <th>@day.MinTemp</th>
+                }
+            </tr>
+        }
+    </table>
+
+    <br />
+    <br />
+    <h2>Maximum temperature</h2>
+    <table class="table table-bordered">
+        <tr>
+            <th>Year</th>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+            <th>Thursday</th>
+            <th>Friday</th>
+            <th>Satuday</th>
+            <th>Sunday</th>
+        </tr>
+        @foreach (var week in _weatherOfWeeks)
+        {
+            <tr>
+                <th>@week.First().Date.Split("-")[0]</th>
+                @foreach (var day in week)
+                {
+                    <th>@day.MaxTemp</th>
+                }
+            </tr>
+        }
+    </table>
+
+    <br />
+    <br />
+    <h2>Sun hours</h2>
+    <table class="table table-bordered">
+        <tr>
+            <th>Year</th>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+            <th>Thursday</th>
+            <th>Friday</th>
+            <th>Satuday</th>
+            <th>Sunday</th>
+        </tr>
+        @foreach (var week in _weatherOfWeeks)
+        {
+            <tr>
+                <th>@week.First().Date.Split("-")[0]</th>
+                @foreach (var day in week)
+                {
+                    <th>@day.SunHour</th>
+                }
+            </tr>
+        }
+    </table>
+}
 
 
 @code {
