--- a/WeatherHistoryViewer.Web/Shared/NavMenu.razor
+++ b/WeatherHistoryViewer.Web/Shared/NavMenu.razor
@@ -13,6 +13,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="weatherOfWeek">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Weather of week
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="weatherOfDate">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Weather of date
             </NavLink>
