Unit test added for helpers

--- a/WeatherHistoryViewer.Web/Pages/Index.razor
+++ b/WeatherHistoryViewer.Web/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 @using WeatherHistoryViewer.Core.Models.Weather
-@using WeatherHistoryViewer.Services.Helper
+@using WeatherHistoryViewer.Services.Helpers
 
 @if (weatherOverviews == null)
 {
