--- a/WeatherHistoryViewer.Web/Pages/WeatherOfWeek.razor
+++ b/WeatherHistoryViewer.Web/Pages/WeatherOfWeek.razor
@@ -1,5 +1,5 @@
 ﻿@page "/weatherOfWeek"
-@using WeatherHistoryViewer.Services.Helper
+@using WeatherHistoryViewer.Services.Helpers
 @using WeatherHistoryViewer.Core.Models.Weather
 @using WeatherHistoryViewer.Services.Handlers
 @using System.ComponentModel.DataAnnotations
