--- a/WeatherHistoryViewer.Web/Pages/WeatherPerYear.razor
+++ b/WeatherHistoryViewer.Web/Pages/WeatherPerYear.razor
@@ -1,7 +1,7 @@
 ﻿@page "/weatherPerYear"
 @using System.ComponentModel.DataAnnotations
 @using WeatherHistoryViewer.Core.Models.Weather
-@using WeatherHistoryViewer.Services.Helper
+@using WeatherHistoryViewer.Services.Helpers
 @using WeatherHistoryViewer.Services.Handlers
 
 <EditForm Model="@_formResponse" OnValidSubmit="@HandleValidSubmit">
