Added azure key vault

--- a/WeatherHistoryViewer.Web/Pages/WeatherOfDate.razor
+++ b/WeatherHistoryViewer.Web/Pages/WeatherOfDate.razor
@@ -62,7 +62,7 @@ else
 {
     <h1>The weather of date @weather.First().Date.Split("-")[1]-@weather.First().Date.Split("-")[2] in @weather.First().Location.Country, @weather.First().Location.Name</h1>
     <br/>
-    <table class="table table-bordered">
+    <table class="table table-bordered" style="width: auto;">
         <thead>
         <tr>
             <th>Year</th>
