--- a/WeatherHistoryViewer.Web/Pages/WeatherPerYear.razor
+++ b/WeatherHistoryViewer.Web/Pages/WeatherPerYear.razor
@@ -26,7 +26,7 @@ else
 {
     <h1>The weather of @_weatherOfYears.First().LocationName</h1>
     <br />
-        <table class="table table-bordered">
+        <table class="table table-bordered" style="width: auto;">
             <thead>
             <tr>
                 <th>Year</th>
