--- a/WeatherHistoryViewer.Web - kopie/Pages/WeatherPerYear.razor
+++ b/WeatherHistoryViewer.Web - kopie/Pages/WeatherPerYear.razor
@@ -1,8 +1,7 @@
 ﻿@page "/weatherPerYear"
-@using System.ComponentModel.DataAnnotations
 @using WeatherHistoryViewer.Core.Models.Weather
+@using WeatherHistoryViewer.Core.Models
 @using WeatherHistoryViewer.Services.Helpers
-@using WeatherHistoryViewer.Services.Handlers
 
 <EditForm Model="@_formResponse" OnValidSubmit="@HandleValidSubmit">
     <DataAnnotationsValidator />
@@ -26,8 +25,8 @@ else
 {
     <h1>The weather of @_weatherOfYears.First().LocationName</h1>
     <br />
-        <table class="table table-bordered" style="width: auto;">
-            <thead>
+    <table class="table table-bordered" style="width: auto;">
+        <thead>
             <tr>
                 <th>Year</th>
                 <th>Avg temp</th>
@@ -37,34 +36,29 @@ else
                 <th>Date of min temp</th>
                 <th>Average sun hours</th>
             </tr>
-            </thead>
-            <tbody>
-                @foreach (var year in _weatherOfYears)
-                {
-                    <tr>
-                        <th>@year.Year</th>
-                        <td>@year.AverageTemp</td>
-                        <td>@year.MaxTemp</td>
-                        <td>@year.DateOfMaxTemp</td>
-                        <td>@year.MinTemp</td>
-                        <td>@year.DateOfMinTemp</td>
-                        <td>@year.AverageSunHours</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
+        </thead>
+        <tbody>
+            @foreach (var year in _weatherOfYears)
+            {
+                <tr>
+                    <th>@year.Year</th>
+                    <td>@year.AverageTemp</td>
+                    <td>@year.MaxTemp</td>
+                    <td>@year.DateOfMaxTemp</td>
+                    <td>@year.MinTemp</td>
+                    <td>@year.DateOfMinTemp</td>
+                    <td>@year.AverageSunHours</td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
 
 @code {
     private readonly WeatherHelper _weatherHelper = new();
     private readonly DateHelper _dateHelper = new();
-    private class Form
-    {
-        [Required]
-        public string Location { get; set; }
-    }
 
-    private readonly Form _formResponse = new();
+    private readonly FormResponse _formResponse = new();
 
     private List<WeatherOverview> _weatherOfYears;
 
